--- a/style.css
+++ b/style.css
@@ -363,55 +363,16 @@ width: 100%;
     text-shadow: 1px 1px white;
     color: rgb(243, 161, 10);
 }
-
-@keyframes bubble {
-    0%{
-        transform: translateY(0);
-        opacity: 0;
-    }
-    50%{
-        opacity: 1;
-    }
-    70%{
-        opacity: 1;
-    }
-   100%{
-        transform: translateY(-80vh);
-        opacity: 0;
-    }
+.gitResult{
+    margin-top: 10px;
+    margin-left: 5%;
+}
+.gitResult img{
+    border-radius: 10px;
+    width: 98%;
+  
 }
 
-.bubbles img:nth-child(1){
-    animation-delay: 2.5s;
-    width: 25px;
-}
-
-.bubbles img:nth-child(2){
-    animation-delay: 1s;
-   
-}
-
-.bubbles img:nth-child(3){
-    animation-delay: 4s;
-    width: 25px;
-}
-
-.bubbles img:nth-child(4){
-    animation-delay: 3s;
-}
-
-.bubbles img:nth-child(5){
-    animation-delay: 6s;
-    width: 25px;
-}
-.bubbles img:nth-child(6){
-    animation-delay: 2s;
-}
-
-.bubbles img:nth-child(7){
-    animation-delay: 7s;
-    width: 5px;
-}
 
 @media only screen and (max-width: 600px) {
     /* body {
@@ -423,7 +384,7 @@ width: 100%;
     }
 
     .wrapper_intro{
-        max-width: 100px;
+        max-width: 130px;
         max-height: 200px;
     }
     .profile_pic img{
@@ -432,12 +393,17 @@ width: 100%;
     }
 
     .social_links{
-        flex-direction: column;
+    margin-left: 20px;
+    /* border: 1px solid; */
+    flex-direction: row;
+        margin-top: 100px;
     }
     .contact_details{
         display: flex;
         flex-direction: column;
         font-size: 10px;
+        margin-top: 100px;
+        margin-left: 20px;
     }
 
     .wrapper_navbar ul li a{
