--- a/style.css
+++ b/style.css
@@ -378,7 +378,10 @@ width: 100%;
     /* body {
       background-color: lightblue;
     } */
-
+*{
+    margin:0px;
+    padding: 0px;
+}
     .wrapper{
         width: 100%;
     }
@@ -389,7 +392,8 @@ width: 100%;
     }
     .profile_pic img{
         margin-left: -30px;
-        width: 150px;
+        width: 100px;
+        height: 100px;
     }
 
     .social_links{
@@ -428,6 +432,11 @@ width: 100%;
     }
 
         .card{ grid-template-columns: repeat(1, 1fr); }
-   
+        .cardcontent p{
+            padding: 0px;
+            margin-top: 10px;
+          
+        }
+        
         
   }
