--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ width: 100%;
     }
 
     .tech_stacks{
-        width: 80%;
+        width: 100%;
     }
     .social_links{
     margin-left: 20px;
@@ -435,6 +435,9 @@ width: 100%;
      padding: 5px;
         font-size: 10px;
     }
+    .about_me{
+        width: 100%;
+    }
     .about_me h1{
         margin-left: 0px;
     }
@@ -444,6 +447,7 @@ width: 100%;
     }
 
         .card{ grid-template-columns: repeat(1, 1fr); 
+            width: 100%;
         }
 
         .projects{
